[gd_scene load_steps=21 format=3 uid="uid://dfct3bhgs0xll"]

[ext_resource type="Script" uid="uid://pn364ya2bedm" path="res://canvas_layer.gd" id="1_ek3oe"]
[ext_resource type="Texture2D" uid="uid://c363ej60y1gt7" path="res://images/WoodMenu.png" id="2_8nnf0"]
[ext_resource type="Texture2D" uid="uid://by5ghkld6on7l" path="res://images/opengameart_josehzz/Crop_Spritesheet.png" id="2_mg525"]
[ext_resource type="Texture2D" uid="uid://twp6ge1y2cro" path="res://images/WaterJug.png" id="3_kfwc7"]
[ext_resource type="Script" uid="uid://nrbm8pniuh27" path="res://scripts/label_corn.gd" id="5_dqqml"]
[ext_resource type="Script" uid="uid://dk0qrlexbt8vi" path="res://scripts/label_budget.gd" id="6_j4tml"]
[ext_resource type="Script" uid="uid://b3entvyot8e86" path="res://scenes/label_water.gd" id="7_qv1hn"]
[ext_resource type="Texture2D" uid="uid://20oaravm18tl" path="res://moisture.png" id="8_j4tml"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rp54d"]
texture = ExtResource("2_8nnf0")

[sub_resource type="AtlasTexture" id="AtlasTexture_4a2ha"]
atlas = ExtResource("2_mg525")
region = Rect2(0.1956501, 144.76807, 15.054174, 14.712952)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6s7q"]
atlas = ExtResource("2_mg525")
region = Rect2(14.898078, 79.37271, 18.020512, 17.678352)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_buy_normal"]
bg_color = Color(0.2, 0.6, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_buy_pressed"]
bg_color = Color(0.1, 0.5, 0.9, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_buy_hover"]
bg_color = Color(0.3, 0.7, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0, 0.4)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_moisture_normal"]
bg_color = Color(0.6, 0.4, 0.2, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_moisture_pressed"]
bg_color = Color(0.5, 0.3, 0.1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_moisture_hover"]
bg_color = Color(0.7, 0.5, 0.3, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_settings_normal"]
bg_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_settings_pressed"]
bg_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_settings_hover"]
bg_color = Color(0.5, 0.5, 0.5, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_ek3oe")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -203.0
offset_bottom = 177.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_rp54d")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="CornButton" type="TextureButton" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_4a2ha")
stretch_mode = 5

[node name="WheatButton" type="TextureButton" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_g6s7q")
stretch_mode = 5

[node name="WaterJugButton" type="TextureButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.49
texture_normal = ExtResource("3_kfwc7")
stretch_mode = 5

[node name="Button_buy_corn" type="Button" parent="."]
offset_left = 353.0
offset_top = 432.0
offset_right = 443.0
offset_bottom = 463.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_buy_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_buy_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_buy_hover")
text = "BUY CORN"
metadata/_edit_use_anchors_ = true

[node name="Label_corn" type="Label" parent="."]
offset_left = 380.0
offset_top = 407.0
offset_right = 418.0
offset_bottom = 456.0
theme_override_colors/font_color = Color(0.2, 0.3, 0.1, 1)
theme_override_font_sizes/font_size = 16
text = "10"
script = ExtResource("5_dqqml")
metadata/_edit_use_anchors_ = true

[node name="Label_budget" type="Label" parent="."]
offset_left = 7.0
offset_top = 439.0
offset_right = 71.0
offset_bottom = 468.0
theme_override_colors/font_color = Color(0.1, 0.5, 0.2, 1)
theme_override_font_sizes/font_size = 18
text = "10000"
script = ExtResource("6_j4tml")
metadata/_edit_use_anchors_ = true

[node name="Label_Budget_label" type="Label" parent="."]
offset_left = 10.0
offset_top = 412.0
offset_right = 74.0
offset_bottom = 435.0
theme_override_colors/font_color = Color(0.3, 0.4, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "BUDGET"
metadata/_edit_use_anchors_ = true

[node name="Button_buy_water" type="Button" parent="."]
offset_left = 211.0
offset_top = 432.0
offset_right = 310.0
offset_bottom = 463.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_buy_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_buy_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_buy_hover")
text = "BUY WATER"
metadata/_edit_use_anchors_ = true

[node name="Label_water" type="Label" parent="."]
offset_left = 254.0
offset_top = 407.0
offset_right = 294.0
offset_bottom = 430.0
theme_override_colors/font_color = Color(0.1, 0.4, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "10"
script = ExtResource("7_qv1hn")
metadata/_edit_use_anchors_ = true

[node name="SeasonTimer" type="VBoxContainer" parent="."]
offset_left = 443.0
offset_top = 393.0
offset_right = 643.0
offset_bottom = 474.0

[node name="SeasonLabel" type="Label" parent="SeasonTimer"]
layout_mode = 2
text = "Current Season"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="SeasonTimer"]
layout_mode = 2
text = "00:00"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="SeasonTimer"]
layout_mode = 2
max_value = 1.0

[node name="LabelSoilMoisture" type="Label" parent="."]
visible = false
offset_top = -6.0
offset_right = 129.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0.8, 0.6, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "Topsoil Moisture"

[node name="LabelSubSoilMoisture" type="Label" parent="."]
visible = false
offset_left = 3.0
offset_top = -2.0
offset_right = 132.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(0.6, 0.4, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "Subsoil Moisture"

[node name="LabelNDVIx" type="Label" parent="."]
visible = false
offset_left = 3.0
offset_top = -2.0
offset_right = 132.0
offset_bottom = 21.0
theme_override_colors/font_color = Color(0.4, 0.6, 0.3, 1)
theme_override_font_sizes/font_size = 14
text = "NDVI"

[node name="MoistureControls" type="HBoxContainer" parent="."]
offset_left = 150.0
offset_top = 5.0
offset_right = 350.0
offset_bottom = 35.0

[node name="TopsoilButton" type="Button" parent="MoistureControls"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_moisture_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_moisture_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_moisture_hover")
text = "Topsoil"

[node name="SubsoilButton" type="Button" parent="MoistureControls"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_moisture_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_moisture_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_moisture_hover")
text = "Subsoil"

[node name="HideMoistureButton" type="Button" parent="MoistureControls"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_moisture_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_moisture_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_moisture_hover")
text = "Hide"

[node name="LabelNDVI2" type="Label" parent="."]
offset_left = 37.0
offset_top = -6.0
offset_right = 166.0
offset_bottom = 17.0
text = "NDVI"

[node name="SoilMoistureMetric" type="TextureRect" parent="."]
offset_left = 33.0
offset_top = 34.0
offset_right = 161.0
offset_bottom = 54.0
rotation = 1.5707964
texture = ExtResource("8_j4tml")

[node name="SettingsButton" type="Button" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 40.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_settings_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_settings_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_settings_hover")
text = "⚙"

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
offset_left = 60.0
offset_top = 10.0
offset_right = 260.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="SaveQuitButton" type="Button" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_buy_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_buy_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_buy_hover")
text = "Save & Quit"

[node name="ExportButton" type="Button" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_moisture_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_moisture_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_moisture_hover")
text = "Export Farm"

[node name="ShareButton" type="Button" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_moisture_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_moisture_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_moisture_hover")
text = "Share Farm"

[node name="HSeparator2" type="HSeparator" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="ExportDialog" type="Panel" parent="."]
visible = false
offset_left = 100.0
offset_top = 50.0
offset_right = 500.0
offset_bottom = 350.0

[node name="VBoxContainer" type="VBoxContainer" parent="ExportDialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ExportLabel" type="Label" parent="ExportDialog/VBoxContainer"]
layout_mode = 2
text = "Export Farm Code"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ExportDialog/VBoxContainer"]
layout_mode = 2

[node name="InstructionLabel" type="Label" parent="ExportDialog/VBoxContainer"]
layout_mode = 2
text = "Copy this code to share your farm:"
autowrap_mode = 2

[node name="ExportCodeEdit" type="TextEdit" parent="ExportDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Export code will appear here..."
editable = false

[node name="ButtonContainer" type="HBoxContainer" parent="ExportDialog/VBoxContainer"]
layout_mode = 2

[node name="CopyCodeButton" type="Button" parent="ExportDialog/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_buy_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_buy_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_buy_hover")
text = "Copy Code"

[node name="CloseExportButton" type="Button" parent="ExportDialog/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[connection signal="pressed" from="Button_buy_corn" to="Label_corn" method="_on_button_buy_corn_pressed"]
[connection signal="pressed" from="Button_buy_water" to="Label_water" method="_on_button_buy_water_pressed"]
[connection signal="pressed" from="MoistureControls/TopsoilButton" to="." method="_on_topsoil_button_pressed"]
[connection signal="pressed" from="MoistureControls/SubsoilButton" to="." method="_on_subsoil_button_pressed"]
[connection signal="pressed" from="MoistureControls/HideMoistureButton" to="." method="_on_hide_moisture_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="SettingsPanel/VBoxContainer/SaveQuitButton" to="." method="_on_save_quit_button_pressed"]
[connection signal="pressed" from="SettingsPanel/VBoxContainer/ExportButton" to="." method="_on_export_button_pressed"]
[connection signal="pressed" from="SettingsPanel/VBoxContainer/ShareButton" to="." method="_on_share_button_pressed"]
[connection signal="pressed" from="SettingsPanel/VBoxContainer/CloseButton" to="." method="_on_close_settings_button_pressed"]
[connection signal="pressed" from="ExportDialog/VBoxContainer/ButtonContainer/CopyCodeButton" to="." method="_on_copy_code_button_pressed"]
[connection signal="pressed" from="ExportDialog/VBoxContainer/ButtonContainer/CloseExportButton" to="." method="_on_close_export_button_pressed"]
